clean some dll rreference

--- a/Source/RequireMVC199/ProductSys.DAL/ProductSys.DAL.csproj
+++ b/Source/RequireMVC199/ProductSys.DAL/ProductSys.DAL.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\..\..\..\..\TAOWeb\Source\PlatFramework\Library\EntityFramework.dll</HintPath>
+      <HintPath>..\..\PlatFramework\Library\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
