--- a/Source/RequireMVC199/RequireMVC199/RequireMVC199.csproj
+++ b/Source/RequireMVC199/RequireMVC199/RequireMVC199.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="ServiceStack.Text">
-      <HintPath>F:\TAOWeb\Source\PlatFramework\Library\ServiceStack.Text.dll</HintPath>
+      <HintPath>..\..\PlatFramework\Library\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -292,7 +292,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>10524</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:8081/RequireMVC199/</IISUrl>
+          <IISUrl>http://PlatWeb/RequireMVC199/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
