change database to mysql

--- a/Source/RequireMVC199/ProductSys.DAL/App.config
+++ b/Source/RequireMVC199/ProductSys.DAL/App.config
@@ -12,7 +12,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-  <add name="ProductDbContext" connectionString="metadata=res://*/ProductModel.csdl|res://*/ProductModel.ssdl|res://*/ProductModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=127.0.0.1\MSSQL2012;initial catalog=SCMDB;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  <add name="StorageDbContext" connectionString="metadata=res://*/StorageModel.csdl|res://*/StorageModel.ssdl|res://*/StorageModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=127.0.0.1\mssql2012;initial catalog=PLUGINDB;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="ProductDbContext" connectionString="server=localhost;User Id=sa;Persist Security Info=True;database=scmdb" providerName=".NET Framework Data Provider for MySQL" />
   </connectionStrings>
 </configuration>
