--- a/Source/RequireMVC199/ProductSys.WebAPI/Web.config
+++ b/Source/RequireMVC199/ProductSys.WebAPI/Web.config
@@ -10,9 +10,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-ProductSys.WebAPI-20121101144916.mdf;Initial Catalog=aspnet-ProductSys.WebAPI-20121101144916;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
-    <add name="ProductDbContext" connectionString="Data Source=127.0.0.1\MSSQL2012;Initial Catalog=SCMDB;Integrated Security=False;User ID=sa;Password=123456;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"/>
-    <add name="StorageDbContext" connectionString="Data Source=127.0.0.1\MSSQL2012;Initial Catalog=PLUGINDB;Integrated Security=False;User ID=sa;Password=123456;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"/>
+    <add name="ProductDbContext" connectionString="server=localhost;User Id=sa;Password=123456;Persist Security Info=True;database=scmdb;" providerName=".NET Framework Data Provider for MySQL" />
+    <add name="StorageDbContext" connectionString="server=localhost;User Id=sa;Password=123456;Persist Security Info=True;database=scmdb;" providerName=".NET Framework Data Provider for MySQL" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
