--- a/Source/RequireMVC199/ProductSys.WebAPI/ProductSys.WebAPI.csproj
+++ b/Source/RequireMVC199/ProductSys.WebAPI/ProductSys.WebAPI.csproj
@@ -51,6 +51,7 @@
       <HintPath>..\..\..\..\..\TAOWeb\Source\PlatFramework\Library\MefContrib.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\HttpContextShim.0.0.5\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -166,6 +167,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Core\ServiceManager.cs" />
+    <Compile Include="Core\SqlConnectionFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
